Buy and Sell button in the menu page

--- a/app/src/main/res/layout/content_buy_goods.xml
+++ b/app/src/main/res/layout/content_buy_goods.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.UniverseActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.m6.views.BuyGoodsActivity"
+    tools:showIn="@layout/activity_buy_goods">
 
 </android.support.constraint.ConstraintLayout>
