--- a/app/src/main/res/layout/content_configuration.xml
+++ b/app/src/main/res/layout/content_configuration.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
     tools:context=".views.ConfigurationActivity">
 
     <EditText
@@ -14,6 +15,9 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/edit_name"
+        android:backgroundTint="@color/yellow"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +31,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="25dp"
         android:text="@string/charactor_name_input"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/name_text"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +44,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="@string/skill_points"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -49,6 +55,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:text="@string/pilot"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -59,6 +66,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:text="@string/fighter"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -69,6 +77,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:text="@string/trader"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -79,6 +88,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:text="@string/engineer"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -89,6 +99,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:text="@string/engineer"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -97,8 +108,11 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="25dp"
+        android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
+
+        android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4" />
 
@@ -107,8 +121,10 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="25dp"
+        android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
+        android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
 
@@ -116,9 +132,11 @@
         android:id="@+id/trader_point_text"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="36dp"
+        android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
+        android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
 
@@ -127,8 +145,10 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="25dp"
+        android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
+        android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
         app:layout_constraintStart_toEndOf="@+id/textView8" />
 
@@ -152,6 +172,8 @@
         android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@color/yellow"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/engineer_point_text" />
 
@@ -162,7 +184,20 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
         android:text="Difficulty"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/remaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="20dp"
+        android:inputType="number"
+        android:text="16"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/name_text" />
 
 </android.support.constraint.ConstraintLayout>
