--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
     tools:context=".views.MainActivity">
 
     <Button
@@ -13,6 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="196dp"
         android:layout_marginEnd="16dp"
+        android:background="@color/yellow"
         android:onClick="makeConfig"
         android:text="@string/button_config"
         android:textSize="12sp"
