allign configuration screen

--- a/app/src/main/res/layout/content_configuration.xml
+++ b/app/src/main/res/layout/content_configuration.xml
@@ -11,29 +11,25 @@
         android:id="@+id/name_text"
         android:layout_width="213dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/yellow"
         android:ems="10"
         android:hint="@string/edit_name"
-        android:backgroundTint="@color/yellow"
+        android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        android:inputType="textPersonName"
+        android:gravity="center"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:text="@string/charactor_name_input"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/name_text"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,7 +37,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="@string/skill_points"
         android:textColor="@android:color/white"
@@ -52,7 +48,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:text="@string/pilot"
         android:textColor="@android:color/white"
@@ -63,7 +59,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:text="@string/fighter"
         android:textColor="@android:color/white"
@@ -74,7 +70,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:text="@string/trader"
         android:textColor="@android:color/white"
@@ -82,21 +78,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        android:text="@string/engineer"
-        android:textColor="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:text="@string/engineer"
         android:textColor="@android:color/white"
@@ -107,50 +92,53 @@
         android:id="@+id/pilot_point_text"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
-
         android:textColor="@android:color/white"
+        android:gravity="center"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/textView4" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/fighter_point_text"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
         android:textColor="@android:color/white"
+        android:gravity="center"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
-        app:layout_constraintStart_toEndOf="@+id/textView6" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/trader_point_text"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
         android:textColor="@android:color/white"
+        android:gravity="center"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
-        app:layout_constraintStart_toEndOf="@+id/textView7" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/engineer_point_text"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
         android:ems="10"
         android:inputType="number"
         android:textColor="@android:color/white"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
-        app:layout_constraintStart_toEndOf="@+id/textView8" />
+        android:gravity="center"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/save_button"
@@ -168,20 +156,21 @@
 
     <Spinner
         android:id="@+id/difficulty_spinner"
+        style="@style/mySpinnerItemStyle"
         android:layout_width="168dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="25dp"
         android:layout_marginTop="12dp"
-        android:textColor="@android:color/white"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/engineer_point_text" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:text="Difficulty"
         android:textColor="@android:color/white"
@@ -192,12 +181,11 @@
         android:id="@+id/remaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:inputType="number"
         android:text="16"
         android:textColor="@android:color/white"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/name_text" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
