--- a/app/src/main/res/layout/content_buy_goods.xml
+++ b/app/src/main/res/layout/content_buy_goods.xml
@@ -469,10 +469,10 @@
         android:id="@+id/buy_max_water"
         android:layout_width="56dp"
         android:layout_height="34dp"
+        android:layout_marginStart="220dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="72dp"
         android:text="MAX"
-        app:layout_constraintEnd_toStartOf="@+id/buy_price_water"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
 </android.support.constraint.ConstraintLayout>
